fixed input length on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -17,3 +17,7 @@
     padding: 5px;
     border-radius: 10px;
 }
+
+.zip {
+    width: 100%;
+}
